cabal-version:      3.0
name:               lume-hs
version:            0.1.0.0
synopsis:           Haskell bindings to the Lume REST API
-- description:
license:            MIT
license-file:       LICENSE
author:             chandler barlow
maintainer:         chandlerbrlw@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lume
    other-modules:
        Lume.API
        Lume.Model
        Lume.Client
    other-extensions:
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LambdaCase
        MultiWayIf
        OverloadedLabels
        OverloadedStrings
        PatternSynonyms
        RecordWildCards
        TypeFamilies
        UndecidableInstances
        -- ViewPatterns

    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:
        base ^>=4.18.2.1,
        servant,
        mtl,
        async,
        aeson

-- test-suite lume-hs-test
--     import:           warnings
--     default-language: Haskell2010
--     -- other-modules:
--     -- other-extensions:
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base ^>=4.18.2.1,
--         lume-hs
